--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: >-
 baseurl: "/clickbait_generator"
 url: "https://dfbr.github.io"
 theme: minima
+future: true
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
