--- a/.github/workflows/generate-story.yml
+++ b/.github/workflows/generate-story.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install openai
+          pip install openai requests
           
       - name: Generate story
         env:
@@ -39,6 +39,6 @@ jobs:
           
       - name: Commit and push new post
         run: |
-          git add _posts/
+          git add _posts/ assets/images/
           git diff --staged --quiet || git commit -m "Add new AI-generated story [$(date +'%Y-%m-%d')]"
           git push
