--- a/.github/workflows/generate-story.yml
+++ b/.github/workflows/generate-story.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install openai requests
+          pip install openai requests Pillow
           
       - name: Generate story
         env:
