Only one story a week and removing files from being published that shouldn't be

--- a/.github/workflows/generate-story.yml
+++ b/.github/workflows/generate-story.yml
@@ -2,7 +2,7 @@ name: Generate Daily Story
 
 on:
   schedule:
-    - cron: '0 3 * * *'  # Every day at 3 AM GMT
+    - cron: '0 3 * * 3'  # Every Wednesday at 3 AM GMT
   workflow_dispatch:  # Allow manual triggering
 
 permissions:
